--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -9,4 +9,5 @@ ADD_SUBDIRECTORY(StaticModel)
 ADD_SUBDIRECTORY(NormalMapping)
 ADD_SUBDIRECTORY(SkeletalAnimation)
 ADD_SUBDIRECTORY(FontRendering)
+ADD_SUBDIRECTORY(ShadowMapping)
 
