Some fixes in Phond Shading.
Phong shading should work properly now as I forgot one thing... Didnt
notice until started working on BRDF. I managed to break font rendering
now. So, font rendering project does not workg. Will need to fix
it...... Plus need to fix shadow as there are problems.

--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -11,4 +11,5 @@ ADD_SUBDIRECTORY(SkeletalAnimation)
 ADD_SUBDIRECTORY(FontRendering)
 ADD_SUBDIRECTORY(ShadowMapping)
 ADD_SUBDIRECTORY(DeferredShading)
+ADD_SUBDIRECTORY(PhysicalBasedShading)
 
