--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -12,4 +12,5 @@ ADD_SUBDIRECTORY(FontRendering)
 ADD_SUBDIRECTORY(ShadowMapping)
 ADD_SUBDIRECTORY(DeferredShading)
 ADD_SUBDIRECTORY(PhysicalBasedShading)
+ADD_SUBDIRECTORY(SSAO)
 
