--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,59 @@ Temporary Items
 .apdisk
 *.obj
 *.bin
+*.exe
+Build/Bin/Debug/FontRendering_d.ilk
+*.db
+*.rule
+*.cmake
+Build/.vs/TywRenderer/v14/.suo
+*.suo
+Build/.vs/TywRenderer/v14/.suo
+*.suo
+Build/Bin/Debug/DeferredShading_d.pdb
+*.ilk
+*.pdb
+*.dll
+Build/CMakeFiles/3.5.2/CompilerIdC/CMakeCCompilerId.c
+*.vcxproj
+*.tlog
+Build/CMakeFiles/3.5.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+*.check_cache
+Build/CMakeFiles/CMakeOutput.log
+*.lib
+Build/Lib/Debug/TywRenderer_d.exp
+Build/CMakeFiles/TargetDirectories.txt
+Build/CMakeFiles/generate.stamp.list
+Build/CMakeFiles/generate.stamp.depend
+Build/CMakeFiles/generate.stamp
+Build/CMakeFiles/feature_tests.cxx
+Build/.vs/TywRenderer/v14/.suo
+*.filters
+Build/CMakeCache.txt
+*.ipch
+*.suo
+*.stamp
+*.depend
+*.sln
+Build/Projects/DeferredShading/DeferredShading.dir/Debug/DeferredShading.log
+Build/x64/Debug/ZERO_CHECK/ZERO_CHECK.log
+Build/x64/Debug/ZERO_CHECK/ZERO_CHECK.Build.CppClean.log
+*.cache
+Build/TywRenderer.VC.VC.opendb
+*.hxx
+Build/Projects/Triangle/Triangle.dir/Debug/Triangle.log
+*.user
+Build/Projects/FontRendering/FontRendering.dir/Debug/FontRendering.log
+*.log
+*.suo
+Build/.vs/TywRenderer/v14/.suo
+*.pch
+*.pch
+*.pch
+*.ini
+Build/Lib/Release/TywRenderer.exp
+*.ini
+Build/CMakeFiles/3.7.0/CompilerIdC/CMakeCCompilerId.c
+Build/Projects/PhysicalBasedShading/imgui.ini
+*.pch
+*.suo
