--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -13,4 +13,4 @@ ADD_SUBDIRECTORY(ShadowMapping)
 ADD_SUBDIRECTORY(DeferredShading)
 ADD_SUBDIRECTORY(PhysicalBasedShading)
 ADD_SUBDIRECTORY(SSAO)
-
+ADD_SUBDIRECTORY(AsteroidGame)
