--- a/Projects/CMakeLists.txt
+++ b/Projects/CMakeLists.txt
@@ -13,4 +13,5 @@ ADD_SUBDIRECTORY(ShadowMapping)
 ADD_SUBDIRECTORY(DeferredShading)
 ADD_SUBDIRECTORY(PhysicalBasedShading)
 ADD_SUBDIRECTORY(SSAO)
-ADD_SUBDIRECTORY(AsteroidGame)
+ADD_SUBDIRECTORY(Bloom)
+#ADD_SUBDIRECTORY(AsteroidGame)
