Some fixes for SSAO , memory deletion.
Also. The architecture of the code will be changing. Slowly.
Right now TywRenderer is no more generated as .dll. But will be
generated as .lib file.

--- a/Projects/Triangle/CMakeLists.txt
+++ b/Projects/Triangle/CMakeLists.txt
@@ -31,6 +31,8 @@ ADD_EXECUTABLE(${PROJECT_NAME}
 	
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
 	${VULKAN_LIB}
+	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/ThirdParty/assimp-vc140-mt.lib"
+	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/ThirdParty/freetype265MT.lib"
 	debug 		"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug/TywRenderer_d.lib"
 	optimized 	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Release/TywRenderer.lib"
 	)
