--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -165,9 +165,14 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC
 
 	
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC
-	 ${VULKAN_LIB}
-	#"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/ThirdParty/assimp-vc140-mt.lib"
-	#"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/ThirdParty/freetype265MT.lib"
+	${VULKAN_LIB}
+	${FREETYPE_LIBRARY}
+	debug ${FREETYPE_LIBRARY_DEBUG}
+	debug ${ASSIMP_LIBRARY_DEBUG}
+	debug ${ZLIB_LIBRARY_DEBUG}
+	optimized ${FREETYPE_LIBRARY_RELEASE}
+	optimized ${ASSIMP_LIBRARY_RELEASE}
+	optimized ${ZLIB_LIBRARY_RELEASE}
 	)
 
 
