--- a/Projects/SSAO/CMakeLists.txt
+++ b/Projects/SSAO/CMakeLists.txt
@@ -40,9 +40,13 @@ ADD_EXECUTABLE(${PROJECT_NAME}
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}  
 	${VULKAN_LIB}
 	${SDL2_LIBRARY}
-	${ASSIMP_LIBRARY}
-	${FREETYPE_LIBRARY}
-	debug 		"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug/TywRenderer_d.lib"
+	debug ${FREETYPE_LIBRARY_DEBUG}
+	debug ${ASSIMP_LIBRARY_DEBUG}
+	debug ${ZLIB_LIBRARY_DEBUG}
+	debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug/TywRenderer_d.lib"
+	optimized ${FREETYPE_LIBRARY_RELEASE}
+	optimized ${ASSIMP_LIBRARY_RELEASE}
+	optimized ${ZLIB_LIBRARY_RELEASE}
 	optimized 	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Release/TywRenderer.lib"
 	)
 
