VIP: Renders rectangular now. TODO: Redesign draw call dispatcher that it would not depend on Renderer Initializer objects. Check about secondary command buffers. Check render pass.

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -113,6 +113,7 @@ SET(HEADERS_VULKAN
 	"Vulkan/VkPipelineLayoutManager.h"
 	"Vulkan/VkRenderPassManager.h"
 	"Vulkan/VkPipelineManager.h"
+	"Vulkan/VkDrawCallDispatcher.h"
 )
 SET(SOURCES_VULKAN
 	"Vulkan/DrawCallManager.cpp"
@@ -128,6 +129,7 @@ SET(SOURCES_VULKAN
 	"Vulkan/VkPipelineLayoutManager.cpp"
 	"Vulkan/VkRenderPassManager.cpp"
 	"Vulkan/VkPipelineManager.cpp"
+	"Vulkan/VkDrawCallDispatcher.cpp"
 )
 SOURCE_GROUP("Vulkan\\Header Files" FILES ${HEADERS_VULKAN})
 SOURCE_GROUP("Vulkan\\Source Files" FILES ${SOURCES_VULKAN})
