Created UniformBuffer Manager and managing all uniform in that class instead in BufferObjectManager

--- a/Renderer/CMakeLists.txt
+++ b/Renderer/CMakeLists.txt
@@ -103,6 +103,7 @@ SET(HEADERS_VULKAN
 	"Vulkan/DrawCallManager.h"
 	"Vulkan/VkBufferLayoutManager.h"
 	"Vulkan/VkBufferObjectManager.h"
+	"Vulkan/VkUniformBufferManager.h"
 	"Vulkan/VkBufferObject.h"
 	"Vulkan/VulkanTextureLoader.h"
 	"Vulkan/VulkanDebug.h"
@@ -125,6 +126,7 @@ SET(SOURCES_VULKAN
 	"Vulkan/VkBufferLayoutManager.cpp"
 	"Vulkan/VkBufferObjectManager.cpp"
 	"Vulkan/VkBufferObject.cpp"
+	"Vulkan/VkUniformBufferManager.cpp"
 	"Vulkan/VulkanTextureLoader.cpp"
 	"Vulkan/VulkanDebug.cpp"
 	"Vulkan/VulkanAndroid.cpp"
